--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,15 +27,18 @@
                 android:contentDescription="@string/logo"
                 app:srcCompat="@drawable/logo"></ImageView>
 
-            <EditText
+
+                <EditText
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="60dp"
-                android:background="@drawable/edittextstyle"
                 android:hint="@string/email_address"
                 android:id="@+id/txt_email"
+                    android:textColor="@color/black"
                 android:ems="10"/>
+
+
 
             <EditText
                 android:id="@+id/txt_psw"
@@ -43,7 +46,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="50dp"
-                android:background="@drawable/edittextstyle"
                 android:drawableLeft="@drawable/ic_action_psw"
                 android:ems="10"
                 android:hint="@string/password"
