kans : Completed till restaurant list

--- a/app/src/main/res/drawable/custombuttons.xml
+++ b/app/src/main/res/drawable/custombuttons.xml
@@ -4,6 +4,7 @@
     ></corners>
 <padding android:bottom="8dp" android:left="8dp" android:right="8dp" android:top="8dp"
     />
-<solid android:color="@color/white"></solid>
+<solid android:color="@color/white">
+</solid>
 
 </shape>
