--- a/app/src/main/res/layout/activity_foodblogger.xml
+++ b/app/src/main/res/layout/activity_foodblogger.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:design="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.kanikasharma.meet2eatandroid.foodblogger">
 
-</android.support.constraint.ConstraintLayout>
+
+    <android.support.design.widget.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/foodblogger_navigation"
+        android:layout_gravity="bottom"
+        design:menu="@menu/activity_navigation_foodblogger_drawer"/>
+
+
+</android.support.design.widget.CoordinatorLayout>
