--- a/app/src/main/res/menu/activity_user_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_user_navigation_drawer.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
 
+      <item
+        android:id="@+id/nav_Home"
+        android:icon="@drawable/ic_action_home"
+        android:title="Profile" />
+
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_menu_profile"
