--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FF8C00</color>
-    <color name="colorPrimaryDark">#ff8c00</color>
+    <color name="colorPrimaryDark">#FF7F50</color>
     <color name="colorAccent">#F4A460</color>
     <color name="azure">#f1f5f8</color>
     <color name="white">#ffffff</color>
