--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,8 +16,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@drawable/gradient_background">
+            android:background="@drawable/gradient_background"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageView"
@@ -28,16 +28,32 @@
                 app:srcCompat="@drawable/logo"></ImageView>
 
 
-                <EditText
+            <TextView
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="60dp"
-                android:hint="@string/email_address"
-                android:id="@+id/txt_email"
-                    android:textColor="@color/black"
-                android:ems="10"/>
+                android:layout_marginTop="50dp"
+                android:text="Email Address"
+                android:textStyle="bold" />
 
+
+            <EditText
+                android:id="@+id/txt_email"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="0dp"
+                android:ems="10"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="40dp"
+                android:text="Password"
+                android:textStyle="bold" />
 
 
             <EditText
@@ -45,41 +61,43 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="0dp"
                 android:drawableLeft="@drawable/ic_action_psw"
                 android:ems="10"
-                android:hint="@string/password"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword" />
 
             <TextView
+                android:id="@+id/txt_forgotpassword"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="240dp"
-                android:textColor="@color/black"
                 android:text="@string/forgot_password"
-                android:textStyle="bold"
-                android:id="@+id/txt_forgotpassword"/>
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btn_login"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="70dp"
+                android:layout_marginTop="50dp"
                 android:background="@drawable/custombuttons"
                 android:text="@string/log_in"
                 android:textColor="@color/Tomato"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="60dp"
                 android:ems="40"
                 android:text="@string/new_to_this_register_here"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:layout_marginLeft="20dp"/>
+                android:id="@+id/txt_registerhere"/>
+
+
 
 
         </LinearLayout>
