--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -5,22 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="com.example.kanikasharma.meet2eatandroid.foodblogger">
+    tools:context="com.example.kanikasharma.meet2eatandroid.restaurant">
+
 
 
     <android.support.design.widget.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/foodblogger_navigation"
+        android:id="@+id/restaurant_navigation"
         android:layout_gravity="bottom"
-        design:menu="@menu/activity_navigation_foodblogger_drawer"/>
-
-
+        design:menu="@menu/activity_user_navigation_drawer"/>
 
     <RelativeLayout
         android:layout_width="410dp"
-        android:layout_height="600dp"
-        >
+        android:layout_height="600dp">
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -48,16 +47,16 @@
             android:id="@+id/textView39" />
 
         <TextView
+            android:id="@+id/txt_lastWeek"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/textView39"
-            android:layout_marginLeft="45dp"
-            android:layout_marginStart="45dp"
-            android:layout_toEndOf="@+id/textView39"
-            android:layout_toRightOf="@+id/textView39"
+            android:layout_marginLeft="22dp"
+            android:layout_marginStart="22dp"
+            android:layout_toEndOf="@+id/textView40"
+            android:layout_toRightOf="@+id/textView40"
             android:text="0"
-            android:textSize="20dp"
-            android:id="@+id/txt_lastWeek" />
+            android:textSize="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -72,18 +71,14 @@
             android:id="@+id/textView40" />
 
         <TextView
-            android:id="@+id/txt_lastMonth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/textView40"
             android:layout_alignLeft="@+id/txt_lastWeek"
             android:layout_alignStart="@+id/txt_lastWeek"
-            android:layout_alignTop="@+id/textView40"
             android:text="0"
-            android:textSize="20dp" />
-
-
-
-
+            android:textSize="20dp"
+            android:id="@+id/txt_lastMonth"/>
 
 
 
@@ -91,4 +86,6 @@
 
 
     </RelativeLayout>
+
+
 </android.support.design.widget.CoordinatorLayout>
