--- a/app/src/main/res/layout/activity_securityquestion.xml
+++ b/app/src/main/res/layout/activity_securityquestion.xml
@@ -18,57 +18,90 @@
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
-            android:layout_marginTop="40dp"
             android:layout_height="150dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
             app:srcCompat="@drawable/lock" />
     </RelativeLayout>
 
+
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="New Password"
+        android:layout_marginTop="60dp"
+        android:textStyle="bold"/>
+
     <EditText
         android:id="@+id/txt_newpsw"
-        android:layout_width="350dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:hint="New Password"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="0dp"
+        android:inputType="textPassword" />
+
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Confirm Password"
+        android:layout_marginTop="30dp"
+        android:textStyle="bold"/>
 
     <EditText
         android:id="@+id/txt_confirmpsw"
-        android:layout_width="350dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:hint="Confirm Password"
         android:layout_gravity="center_horizontal"
-        />
+        android:layout_marginTop="0dp"
+        android:inputType="textPassword" />
+
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="Security Question"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
+        android:textStyle="bold"/>
+
 
     <TextView
         android:id="@+id/txt_securityquestion"
-        android:layout_width="350dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
-        android:text="TextView"/>
+        android:layout_marginTop="0dp" />
+
+
+
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Security Answer"
+        android:textStyle="bold"
+        android:layout_marginTop="40dp"/>
 
 
 
 
     <EditText
         android:id="@+id/txt_secureans"
-        android:layout_width="350dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:hint="Security Answer"
         android:layout_gravity="center_horizontal"/>
 
     <Button
         android:id="@+id/btn_submit"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/custombuttons"
-        android:textColor="@color/Tomato"
-        android:text="SUBMIT"
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
-        />
+        android:background="@drawable/custombuttons"
+        android:text="SUBMIT"
+        android:textColor="@color/Tomato" />
 
 
 
