--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="com.example.kanikasharma.meet2eatandroid.user">
     
     <android.support.design.widget.BottomNavigationView
@@ -12,5 +13,72 @@
         android:id="@+id/user_navigation"
         android:layout_gravity="bottom"
         design:menu="@menu/activity_user_navigation_drawer"/>
+
+
+    <RelativeLayout
+        android:layout_width="410dp"
+        android:layout_height="600dp"
+        android:background="@color/white">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="169dp"
+            android:text="Meetup Statistics"
+            android:textColor="@color/darkorange"
+            android:textSize="30dp"
+            android:textStyle="italic"
+            android:id="@+id/textView38" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView38"
+            android:layout_alignStart="@+id/textView38"
+            android:layout_below="@+id/textView38"
+            android:layout_marginTop="38dp"
+            android:text="Past 7 days:"
+            android:textColor="@color/black"
+            android:textSize="25dp"
+            android:id="@+id/textView39" />
+
+        <TextView
+            android:id="@+id/txt_lastWeek"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/textView39"
+            android:layout_toEndOf="@+id/textView40"
+            android:layout_toRightOf="@+id/textView40"
+            android:text="0"
+            android:textSize="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView39"
+            android:layout_alignStart="@+id/textView39"
+            android:layout_below="@+id/textView39"
+            android:layout_marginTop="36dp"
+            android:text="Past 30 days:"
+            android:textColor="@color/black"
+            android:textSize="25dp"
+            android:id="@+id/textView40" />
+
+        <TextView
+            android:id="@id/txt_lastMonth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/textView40"
+            android:layout_toEndOf="@+id/txt_lastWeek"
+            android:layout_toRightOf="@+id/txt_lastWeek"
+            android:text="0"
+            android:textSize="20dp" />
+
+    </RelativeLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
