--- a/app/src/main/res/layout/meetup_list.xml
+++ b/app/src/main/res/layout/meetup_list.xml
@@ -4,10 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.kanikasharma.meet2eatandroid.restaurant_list">
+    android:background="@color/white"
+    tools:context="com.example.kanikasharma.meet2eatandroid.meetup_list">
+
 
     <ListView
-        android:id="@+id/lvRestaurants"
+        android:id="@+id/lvMeetups"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -18,7 +20,6 @@
         >
 
     </ListView>
-
 
 
 </RelativeLayout>
