--- a/app/src/main/res/layout/meetup_template.xml
+++ b/app/src/main/res/layout/meetup_template.xml
@@ -1,53 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:baselineAligned="false"
-    android:background="@drawable/roundedborder">
+    android:background="@drawable/roundedborder"
+    android:baselineAligned="false">
+
 
 
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:background="@color/white"
-       >
+        android:background="@color/white">
+
+        <TextView
+        android:id="@+id/meetupTitle"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="TITLE"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textAllCaps="true"/>
 
 
         <TextView
             android:id="@+id/restaurantName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="Name"
-            android:textColor="@color/black"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:textAllCaps="true"/>
-
-        <TextView
-            android:id="@+id/restaurantType"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/restaurantName"
-            android:text="Type"
+            android:layout_below="@+id/meetupTitle"
+            android:text="Restaurant Name"
             android:textSize="20sp"
             android:textColor="@color/black"/>
+
+
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/restaurantType"
+            android:layout_below="@+id/restaurantName"
             android:layout_marginTop="16dp"
             android:background="@drawable/ic_action_location"
             android:id="@+id/imageView7" />
+
 
         <TextView
             android:id="@+id/restaurantAddress"
@@ -60,21 +62,22 @@
             android:textColor="@color/gray"
             android:textSize="20sp" />
 
+
+
     </RelativeLayout>
+
 
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="165dp"
         android:layout_weight="1"
-        android:background="@color/white"
-
-        >
+        android:background="@color/white">
 
         <TextView
-            android:id="@+id/restaurantTimings"
+            android:id="@+id/meetupDateTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/imageView4"
+            android:layout_alignTop="@+id/imageView4"
             android:layout_marginLeft="9dp"
             android:layout_marginStart="9dp"
             android:layout_toEndOf="@+id/imageView4"
@@ -83,6 +86,7 @@
             android:textColor="@color/black"
             android:textSize="15sp" />
 
+
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="wrap_content"
@@ -90,37 +94,21 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
             android:background="@drawable/ic_action_timming" />
 
+
         <TextView
-            android:id="@+id/restaurantAvl"
+            android:id="@+id/maxNoOfAtendee"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/restaurantCapacity"
-            android:layout_alignStart="@+id/restaurantCapacity"
+            android:layout_alignLeft="@+id/meetupDateTime"
+            android:layout_alignStart="@+id/meetupDateTime"
             android:layout_below="@+id/imageView4"
-            android:layout_marginTop="17dp"
-            android:text="Availaibility"
+            android:layout_marginTop="11dp"
+            android:text="Maximum people"
             android:textColor="@color/black" />
 
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/imageView6"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:background="@drawable/ic_action_avl" />
-
-        <TextView
-            android:id="@+id/restaurantCapacity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/restaurantTimings"
-            android:layout_alignStart="@+id/restaurantTimings"
-            android:layout_alignTop="@+id/imageView6"
-            android:text="capacity"
-            android:textColor="@color/black" />
 
         <ImageView
             android:id="@+id/imageView6"
@@ -128,11 +116,37 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/restaurantAvl"
+            android:layout_below="@+id/meetupDateTime"
             android:layout_marginTop="11dp"
             android:background="@drawable/ic_action_people" />
 
-    </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView6"
+            android:layout_marginTop="12dp"
+            android:layout_toLeftOf="@+id/maxNoOfAtendee"
+            android:layout_toStartOf="@+id/maxNoOfAtendee"
+            android:text="Status"
+            android:textColor="@color/black"
+            android:id="@+id/textView11" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView11"
+            android:layout_alignBottom="@+id/textView11"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_toEndOf="@+id/textView11"
+            android:layout_toRightOf="@+id/textView11"
+            android:text="value"
+            android:id="@+id/status"
+            android:textStyle="bold"/>
+
+
+
+
+    </RelativeLayout>
 
 </LinearLayout>
