--- a/app/src/main/res/menu/activity_user_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_user_navigation_drawer.xml
@@ -5,16 +5,17 @@
       <item
         android:id="@+id/nav_Home"
         android:icon="@drawable/ic_action_home"
-        android:title="Profile" />
+        android:title="Home"
+          />
 
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_menu_profile"
             android:title="Profile" />
         <item
-            android:id="@+id/nav_pastmeetups"
+            android:id="@+id/nav_meetups"
             android:icon="@drawable/ic_menu_pastmeetups"
-            android:title="Past Meetups" />
+            android:title="Meetups" />
 
        <item
            android:id="@+id/nav_account"
