--- a/app/src/main/res/layout/activity_restaurant_profilee.xml
+++ b/app/src/main/res/layout/activity_restaurant_profilee.xml
@@ -32,7 +32,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="0dp"
                 android:text="Basic Information"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:text="Email"
                 android:textColor="@color/black"
-                android:layout_marginTop="15dp"/>
+                android:layout_marginTop="05dp"/>
 
             <EditText
                 android:id="@+id/txt_email"
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="0dp"
                 android:textColor="@color/black"/>
 
             <EditText
@@ -70,7 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Contact No"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="0dp"
                 android:textColor="@color/black"/>
 
             <EditText
@@ -83,7 +83,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="0dp"
                 android:textColor="@color/black"
                 android:text="Address"/>
 
@@ -98,7 +98,7 @@
             <TextView
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="0dp"
                 android:text="Type"
                 android:textColor="@color/black" />
 
@@ -176,7 +176,7 @@
             <TextView
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="0dp"
                 android:text="Start Time"
                 android:textColor="@color/black"/>
 
@@ -190,7 +190,7 @@
             <TextView
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="0dp"
                 android:text="End time"
                 android:textColor="@color/black"/>
 
@@ -204,10 +204,11 @@
             </TimePicker>
 
             <Button
+                android:id="@+id/btn_Update"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="0dp"
                 android:background="@color/darkorange"
                 android:paddingBottom="8dp"
                 android:paddingLeft="8dp"
@@ -215,8 +216,7 @@
                 android:paddingTop="8dp"
                 android:text="Update"
                 android:textColor="@color/white"
-                android:textStyle="bold"
-                android:id="@+id/btn_Update"/>
+                android:textStyle="bold" />
 
 
         </LinearLayout>
