--- a/app/src/main/res/layout/activity_createmeetup.xml
+++ b/app/src/main/res/layout/activity_createmeetup.xml
@@ -33,7 +33,7 @@
 
     <EditText
         android:id="@+id/txt_title"
-        android:layout_width="200dp"
+        android:layout_width="190dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView5"
         android:layout_alignStart="@+id/textView5"
@@ -63,40 +63,43 @@
         android:id="@+id/txt_dateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView7"
-        android:layout_alignStart="@+id/textView7"
+        android:layout_alignLeft="@+id/txt_title"
+        android:layout_alignStart="@+id/txt_title"
         android:layout_below="@+id/txt_title"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="59dp"
         android:text="Meetup date and Time" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/textView34"
-        android:layout_toStartOf="@+id/textView34"
+        android:layout_alignBaseline="@+id/textView34"
+        android:layout_alignBottom="@+id/textView34"
+        android:layout_alignLeft="@+id/txt_dateTime"
+        android:layout_alignStart="@+id/txt_dateTime"
         android:text="Max number of people" />
 
     <NumberPicker
         android:id="@+id/maxnumber"
         android:layout_width="wrap_content"
         android:layout_height="120dp"
+        android:layout_above="@+id/textView10"
         android:layout_alignLeft="@+id/textView10"
         android:layout_alignStart="@+id/textView10"
-        android:layout_below="@+id/textView34"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="19dp"></NumberPicker>
+        android:layout_marginBottom="9dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginStart="14dp"></NumberPicker>
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/txt_dateTime"
-        android:layout_alignBottom="@+id/txt_dateTime"
-        android:layout_toEndOf="@+id/txt_title"
-        android:layout_toRightOf="@+id/txt_title"
+        android:layout_alignLeft="@+id/txt_type"
+        android:layout_alignStart="@+id/txt_type"
+        android:layout_below="@+id/txt_type"
+        android:layout_marginLeft="9dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="28dp"
         android:text="Duration(hours)" />
 
     <NumberPicker
@@ -106,14 +109,16 @@
         android:layout_alignLeft="@+id/minnumber"
         android:layout_alignStart="@+id/minnumber"
         android:layout_below="@+id/textView9"></NumberPicker>
+
     <TextView
         android:id="@+id/textView34"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:text="Minimum number of people" />
+        android:layout_below="@+id/duration"
+        android:layout_marginTop="18dp"
+        android:layout_toEndOf="@+id/textView7"
+        android:layout_toRightOf="@+id/textView7"
+        android:text="Min number of people" />
 
     <NumberPicker
         android:id="@+id/minnumber"
@@ -127,10 +132,10 @@
         android:id="@+id/textView10"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/txt_Description"
-        android:layout_marginBottom="16dp"
-        android:layout_toLeftOf="@+id/txt_duration"
-        android:layout_toStartOf="@+id/txt_duration"
+        android:layout_alignBottom="@+id/txt_Description"
+        android:layout_alignLeft="@+id/textView7"
+        android:layout_alignStart="@+id/textView7"
+        android:layout_marginBottom="36dp"
         android:text="Description" />
 
     <EditText
