--- a/app/src/main/res/layout/activity_meetupdetails.xml
+++ b/app/src/main/res/layout/activity_meetupdetails.xml
@@ -33,7 +33,6 @@
         android:layout_alignLeft="@+id/txt_meetupTitle"
         android:layout_alignStart="@+id/txt_meetupTitle"
         android:layout_below="@+id/imageView8"
-        android:layout_marginTop="17dp"
         android:text="Title"
         android:textColor="@color/black" />
 
@@ -45,9 +44,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView24"
-        android:layout_marginLeft="27dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp"
         android:text="MEETUP TITLE"
         android:textAllCaps="true"
         android:textSize="20sp"
@@ -57,10 +55,9 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/confirm"
         android:layout_alignLeft="@+id/txt_meetupTitle"
         android:layout_alignStart="@+id/txt_meetupTitle"
-        android:layout_below="@+id/txt_meetupTitle"
-        android:layout_marginTop="18dp"
         android:text="Restaurant Name"
         android:textColor="@color/black" />
 
@@ -112,7 +109,7 @@
         android:layout_alignEnd="@+id/textView15"
         android:layout_alignRight="@+id/textView15"
         android:layout_below="@+id/view"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="8dp"
         android:text="Timings"
         android:textColor="@color/black" />
 
@@ -191,4 +188,53 @@
         android:layout_marginTop="15dp"
         android:text="confirm"
         android:id="@+id/confirm"/>
+
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/confirm"
+        android:layout_alignStart="@+id/confirm"
+        android:layout_alignTop="@+id/textView12"
+        android:layout_marginTop="8dp"
+        android:text="Max Number"
+        android:textColor="@color/black" />
+
+    <TextView
+        android:id="@+id/maxNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView21"
+        android:layout_alignStart="@+id/textView21"
+        android:layout_below="@+id/textView21"
+        android:hint="max number "/>
+
+    <TextView
+        android:id="@+id/textView41"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/maxNumber"
+        android:layout_alignStart="@+id/maxNumber"
+        android:layout_below="@+id/maxNumber"
+        android:text="Min Number"
+        android:textColor="@color/black" />
+
+    <TextView
+        android:id="@+id/minNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView41"
+        android:layout_alignStart="@+id/textView41"
+        android:layout_below="@+id/textView13"
+        android:hint="min number" />
+
+
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/txt_Description"
+        android:layout_alignStart="@+id/txt_Description"
+        android:layout_below="@+id/textView26"
+        android:layout_marginTop="11dp" />
 </RelativeLayout>
