--- a/app/src/main/res/menu/activity_navigation_foodblogger_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_foodblogger_drawer.xml
@@ -19,7 +19,7 @@
         <item
             android:id="@+id/meetups"
             android:icon="@drawable/ic_menu_pastmeetups"
-            android:title="Past Meetups"/>
+            android:title="Meetups"/>
         <item
             android:id="@+id/nav_account"
             android:icon="@drawable/ic_action_account"
